--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,17 @@ buildscript {
 plugins {
 	id 'org.springframework.boot' version '2.4.5'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'java'
+	id "application"
+}
+
+apply plugin : "java"
+
+ext {
+	javaMainClass = "com.assignment.tomatopay.TomatopayApplication"
+}
+
+application {
+	mainClassName = javaMainClass
 }
 
 group = 'com.assignment'
@@ -46,5 +56,3 @@ dependencies {
 test {
 	useJUnit()
 }
-
-mainClassName = 'TomatopayApplication'
